--- a/index.html
+++ b/index.html
@@ -6,5 +6,33 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Basilissa Restaurant | Home of quality breakfast</title>
   </head>
-  <body></body>
+  <body>
+    <div class="parent">
+      <header>
+        <nav>
+          <ul>
+            <li><a href="#" id="home">Home</a></li>
+            <li><a href="#">Recipe</a></li>
+            <li><a href="#">Food Lover</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Menu</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <div class="container">
+        <div class="left">
+          <img
+            src="img/72320650-f32c-46c8-9691-a9b006c33ac5.jpeg"
+            alt="Pizza"
+          />
+        </div>
+        <div class="right">
+          <h3>Do you eat</h3>
+          <h1>Breakfast</h1>
+          <h3>at any time</h3>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
