--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <div class="parent">
+      <div class="solid"></div>
       <header>
         <nav>
+          <h2 class="logo">Basilissa</h2>
           <ul>
             <li><a href="#" id="home">Home</a></li>
             <li><a href="#">Recipe</a></li>
@@ -30,7 +32,14 @@
         <div class="right">
           <h3>Do you eat</h3>
           <h1>Breakfast</h1>
-          <h3>at any time</h3>
+          <h3 id="time">at any time</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Consequuntur numquam dolor omnis consequatur, rerum mollitia
+            molestias. Quo possimus inventore quia aperiam pariatur totam, omnis
+            sed quam, error voluptatibus voluptates recusandae.
+          </p>
+          <button>Book Now</button>
         </div>
       </div>
     </div>
